--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+application.title=diamond
+application.vendor=sakurai
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form,**/*.scala
 # This directory is removed when the project is cleaned:
@@ -16,6 +18,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/diamond.jar
 dist.javadoc.dir=${dist.dir}/scaladoc
 excludes=
+file.reference.git-diamond=.
 includes=**
 jar.compress=false
 java.platform.active=java_default_platform
@@ -60,3 +63,4 @@ scalac.compilerargs=
 scalac.deprecation=no
 scalac.unchecked=no
 source.encoding=UTF-8
+src.diamond.dir=${file.reference.git-diamond}
